--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
         </form>
         </div>
       <div class="col">
-        <img src="/img/loginn.jpg" alt="" width="120%" height="50%" class="src">
+        <img src="img/loginn.jpg" alt="" width="120%" height="50%" class="src">
       </div>
     </div>
+    <a href="Registration.html">Click to register</a>
   </div>
   
 </body>
