--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
             <label class="form-check-label" for="exampleCheck1">Remember me</label>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
+          <span>--or--</span>
+            <a href="Registration.html">Click to register</a>
         </form>
         </div>
       <div class="col">
         <img src="img/loginn.jpg" alt="" width="120%" height="50%" class="src">
       </div>
     </div>
-    <a href="Registration.html">Click to register</a>
   </div>
   
 </body>
